--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.15.21",
     "@react-google-maps/api": "^2.19.3",
     "@react-spring/web": "^9.7.4",
+    "@reduxjs/toolkit": "^2.9.2",
     "aos": "^2.3.4",
     "axios": "^1.11.0",
     "chart.js": "^4.5.0",
@@ -27,8 +28,11 @@
     "react-intersection-observer": "^9.13.0",
     "react-lazyload": "^3.2.1",
     "react-material-ui-carousel": "^3.4.2",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.24.1",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.0.0",
+    "redux-persist": "^6.0.0",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
