--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "aos": "^2.3.4",
     "axios": "^1.11.0",
     "chart.js": "^4.5.0",
+    "ether.js": "^1.0.0",
+    "ethers": "^6.15.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-countup": "^6.5.3",
